<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_drugdose"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinnerFarmaco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:entries="@array/lista_farmaci"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/etPeso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_peso"
        android:inputType="numberDecimal"
        android:layout_marginBottom="8dp"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/spinnerFarmaco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etAltezza"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_altezza"
        android:inputType="numberDecimal"
        android:layout_marginBottom="8dp"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/etPeso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etEta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_eta"
        android:inputType="number"
        android:layout_marginBottom="16dp"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/etAltezza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnCalcola"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_calcola"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/etEta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtRisultato"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_risultato"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/btnCalcola"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>